; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_cmdbreak.c_info_break_all.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_cmdbreak.c_info_break_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MRB_DEBUG_OK = common dso_local global i32 0, align 4
@BREAK_ERR_MSG_NOBPNO_INFOALL = common dso_local global i32 0, align 4
@BREAK_INFO_MSG_HEADER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*)* @info_break_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @info_break_all(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %9 = load i32, i32* @MRB_DEBUG_OK, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @mrb_debug_get_breaknum(i32* %10, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @print_api_common_error(i32 %18)
  br label %67

20:                                               ; preds = %2
  %21 = load i32, i32* %5, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i32, i32* @BREAK_ERR_MSG_NOBPNO_INFOALL, align 4
  %25 = call i32 @puts(i32 %24)
  br label %67

26:                                               ; preds = %20
  br label %27

27:                                               ; preds = %26
  %28 = load i32*, i32** %3, align 8
  %29 = load i32, i32* %5, align 4
  %30 = sext i32 %29 to i64
  %31 = mul i64 %30, 4
  %32 = trunc i64 %31 to i32
  %33 = call i64 @mrb_malloc(i32* %28, i32 %32)
  %34 = inttoptr i64 %33 to i32*
  store i32* %34, i32** %8, align 8
  %35 = load i32*, i32** %3, align 8
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* %5, align 4
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @mrb_debug_get_break_all(i32* %35, i32 %38, i32 %39, i32* %40)
  store i32 %41, i32* %7, align 4
  %42 = load i32, i32* %7, align 4
  %43 = icmp slt i32 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %27
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @print_api_common_error(i32 %45)
  br label %67

47:                                               ; preds = %27
  %48 = load i32, i32* @BREAK_INFO_MSG_HEADER, align 4
  %49 = call i32 @puts(i32 %48)
  store i32 0, i32* %6, align 4
  br label %50

50:                                               ; preds = %60, %47
  %51 = load i32, i32* %6, align 4
  %52 = load i32, i32* %5, align 4
  %53 = icmp slt i32 %51, %52
  br i1 %53, label %54, label %63

54:                                               ; preds = %50
  %55 = load i32*, i32** %8, align 8
  %56 = load i32, i32* %6, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  %59 = call i32 @print_breakpoint(i32* %58)
  br label %60

60:                                               ; preds = %54
  %61 = load i32, i32* %6, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %6, align 4
  br label %50

63:                                               ; preds = %50
  %64 = load i32*, i32** %3, align 8
  %65 = load i32*, i32** %8, align 8
  %66 = call i32 @mrb_free(i32* %64, i32* %65)
  br label %67

67:                                               ; preds = %63, %44, %23, %17
  ret void
}

declare dso_local i32 @mrb_debug_get_breaknum(i32*, i32) #1

declare dso_local i32 @print_api_common_error(i32) #1

declare dso_local i32 @puts(i32) #1

declare dso_local i64 @mrb_malloc(i32*, i32) #1

declare dso_local i32 @mrb_debug_get_break_all(i32*, i32, i32, i32*) #1

declare dso_local i32 @print_breakpoint(i32*) #1

declare dso_local i32 @mrb_free(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
